--- a/tests-c/Makefile.am
+++ b/tests-c/Makefile.am
@@ -2,8 +2,10 @@
 
 AM_CPPFLAGS	= -I$(top_srcdir)/c
 
+if WANT_CLIB
 check_PROGRAMS	= \
 	cal2jd
+endif
 
 LDADD		= ../c/libsofac.la
 TESTS		= $(check_PROGRAMS)
