fixed f77 test, more compiler flags for test programs

--- a/tests-f77/Makefile.am
+++ b/tests-f77/Makefile.am
@@ -1,20 +1,16 @@
 ## Process this file with automake to produce Makefile.in
 
-#AM_CPPFLAGS	= -I$(top_srcdir)/f77
+AM_FFLAGS	= -Wall
 
 if WANT_FLIB
 check_PROGRAMS	= \
 	cal2jd
 endif
 
+cal2jd_SOURCES	= cal2jd.f
+
 LDADD		= ../f77/libsofaf.la
 TESTS		= $(check_PROGRAMS)
 EXTRA_DIST	= $(check_PROGRAMS)
-
-# cal2jd$(EXEEXE): cal2jd.$(OBJEXE)
-# 	$(F77) -o $@ $(AM_FFLAGS) $(FFLAGS) $^
-
-# cal2jd$(OBJEXE): cal2jd.f
-# 	$(F77) -o $@ -c $(AM_FFLAGS) $(FFLAGS) $^
 
 ### end of file
