--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-ACLOCAL_MFLAGS		= -I m4
-AUTOMAKE_OPTIONS	= foreign
+ACLOCAL_MFLAGS		= -I autotools
 SUBDIRS			= c f77 tests-c tests-f77 doc
 EXTRA_DIST		= INSTALL
 dist_doc_DATA		= README COPYING
