--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ config.guess
 config.h.in
 config.sub
 config.cache
+config.cache-bare
 configure
 depcomp
 test-driver
@@ -43,3 +44,4 @@ mkinstalldirs
 ltmain.sh
 m4/
 autotools/
+
