--- a/c/Makefile.am
+++ b/c/Makefile.am
@@ -1,11 +1,15 @@
 ## Process this file with automake to produce Makefile.in
 
-AM_CFLAGS = -Wall
+AM_CFLAGS		= -Wall
+
+sofac_CURRENT		= @sofac_VERSION_INTERFACE_CURRENT@
+sofac_REVISION		= @sofac_VERSION_INTERFACE_REVISION@
+sofac_AGE		= @sofac_VERSION_INTERFACE_AGE@
 
 if WANT_CLIB
 lib_LTLIBRARIES		= libsofac.la
 endif
-libsofac_la_LDFLAGS	= -version-info 1:0:0
+libsofac_la_LDFLAGS	= -version-info $(sofac_CURRENT):$(sofac_REVISION):$(sofac_AGE)
 include_HEADERS		= sofa.h sofam.h
 libsofac_la_SOURCES	= \
 	a2af.c		a2tf.c		af2a.c		\
